samples/_failures_safe/1761367371_11ad2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0f80c0c.c: In function ‘main’:
./samples/SAFE/__tmp_f0f80c0c.c:179:38: error: missing terminating ' character
  179 |     if (len > 0 && input[len - 1] == '\n
      |                                      ^~~
./samples/SAFE/__tmp_f0f80c0c.c:179:5: error: expected expression at end of input
  179 |     if (len > 0 && input[len - 1] == '\n
      |     ^~
./samples/SAFE/__tmp_f0f80c0c.c:179:5: error: expected declaration or statement at end of input
